# OCL_Cache_Simulator

./: .gitignore  CMakeLists.txt  README  README.md  visualise.py  visualize.py
benchmarks/: CMakeLists.txt
benchmarks/matrix/: CMakeLists.txt
benchmarks/matrix/mm/: CMakeLists.txt  mm.cl  mtx_mul.cpp
benchmarks/matrix/mt/: CMakeLists.txt  SystemConfiguration.h.cmake  mt.cl  mt.cpp
benchmarks/matrix/mv/: CMakeLists.txt  mv.cl  mv.cpp
benchmarks/parboil/: CMakeLists.txt
benchmarks/parboil/bfs/: CMakeLists.txt  Makefile  bfs.cl  bfs.cpp
benchmarks/parboil/stencil/: CMakeLists.txt  stencil.cl  stencil.cpp
benchmarks/polybench/: CMakeLists.txt
benchmarks/polybench/OpenCL/: CMakeLists.txt
benchmarks/polybench/OpenCL/2DCONV/: 2DConvolution.cpp  CMakeLists.txt
benchmarks/polybench/OpenCL/2MM/: .2mm.cpp.swp  2mm.cpp  CMakeLists.txt
benchmarks/polybench/OpenCL/3DCONV/: 3DConvolution.cpp  CMakeLists.txt
benchmarks/polybench/OpenCL/3MM/: 3mm.cpp  CMakeLists.txt
benchmarks/polybench/OpenCL/ATAX/: CMakeLists.txt  atax.cpp
benchmarks/polybench/OpenCL/ATAX2/: CMakeLists.txt  atax.cl  atax.cpp
benchmarks/polybench/OpenCL/ATAX3/: CMakeLists.txt  atax.cpp
benchmarks/polybench/OpenCL/BICG/: CMakeLists.txt  bicg.cl  bicg.cpp
benchmarks/polybench/OpenCL/CORR/: CMakeLists.txt  correlation.cpp
benchmarks/polybench/OpenCL/CORR2/: CMakeLists.txt  correlation.cpp
benchmarks/polybench/OpenCL/COVAR/: CMakeLists.txt  covariance.cpp
benchmarks/polybench/OpenCL/FDTD-2D/: CMakeLists.txt  fdtd2d.cpp
benchmarks/polybench/OpenCL/GEMM/: CMakeLists.txt  gemm.cpp
benchmarks/polybench/OpenCL/GESUMMV/: CMakeLists.txt  gesummv.cpp
benchmarks/polybench/OpenCL/GRAMSCHM/: CMakeLists.txt  gramschmidt.cl  gramschmidt.cpp
benchmarks/polybench/OpenCL/MVT/: CMakeLists.txt  mvt.cl  mvt.cpp
benchmarks/polybench/OpenCL/SYR2K/: CMakeLists.txt  syr2k.cpp
benchmarks/polybench/OpenCL/SYRK/: CMakeLists.txt  syrk.cpp
benchmarks/polybench/common/include/: Utils.h
benchmarks/polybench/common/src/: Utils.cpp
passes/: README.txt
passes/MemSize/: CMakeLists.txt  MemSize.cpp  trace.h
passes/MemTrace/: CMakeLists.txt  MemTrace.cpp  trace.h
support/: CMakeLists.txt
support/bench_support/: CMakeLists.txt
support/scripts/: size_trace.sh  trace_script.sh  vi_size_script.sh  vi_trace_script.sh
support/wrapper/: CMakeLists.txt
support/wrapper/include/OpenCLWrapper/: Event.h  Kernel.h  Platform.h  Program.h  Queue.h  SystemConfig.h  SystemConfiguration.h.cmake
support/wrapper/include/Utils/: FileUtils.h
support/wrapper/lib/OpenCLWrapper/: CMakeLists.txt
support/wrapper/lib/OpenCLWrapper/include/: AmdISAParser.h  NvidiaBuildLogParser.h
support/wrapper/lib/OpenCLWrapper/src/: AmdISAParser.cpp  Buffer.cpp  Context.cpp  Device.cpp  Event.cpp  Kernel.cpp  NvidiaBuildLogParser.cpp  Platform.cpp  Program.cpp  Queue.cpp
support/wrapper/lib/Utils/: CMakeLists.txt
support/wrapper/lib/Utils/src/: Utils.cpp
tools/: CMakeLists.txt
tools/R/: graph.R
tools/cacheSimulator/: CMakeLists.txt  README  cache.cpp  cache.h  common.h  main.cpp  parse.cpp  parse.h  stats.cpp  stats.h
tools/scheduler/: CMakeLists.txt  main.cpp  parse.cpp  parse.h  schedule.cpp  schedule.h  trace.cpp  trace.h  warp.cpp  warp.h
