set(COMMON_DIR "common")
set(OPENCL_DIR "OpenCL")
set(INCLUDE_DIR "include") 
set(SRC_DIR "src")

set(COMMON_PATH ${POLYBENCH_PATH}/${COMMON_DIR})
set(COMMON_INCLUDE_PATH ${COMMON_PATH}/${INCLUDE_DIR})
set(COMMON_SRC_PATH ${COMMON_PATH}/${SRC_DIR})
set(OPENCL_PATH ${POLYBENCH_PATH}/${OPENCL_DIR})

set(BENCH_INCLUDE_PATH ${TOOLS_PATH}/${BENCH_SUPPORT_LIB_DIR}/${BENCH_SUPPORT_INCLUDE_DIR})
set(INCLUDE_DIRS ${BENCH_INCLUDE_PATH} ${OPENCL_INCLUDE_PATH} ${COMMON_INCLUDE_PATH})

# Include directories.
include_directories(${INCLUDE_DIRS})

add_subdirectory(OpenCL)
