set(LIB_PATH "${OPENCL_WRAPPER_PATH}/${OPENCL_WRAPPER_LIB_DIR}")
set(INCLUDE_PATH "${OPENCL_WRAPPER_PATH}/${OPENCL_WRAPPER_INCLUDE_DIR}")

set(UTILS_PATH "${LIB_PATH}/${OPENCL_WRAPPER_UTILS_LIB_DIR}")
set(CODE_LIB_PATH "${LIB_PATH}/${OPENCL_WRAPPER_CODE_LIB_DIR}")

set(BOOST_INCLUDE_PATHS "usr/include")
set(BOOST_LIB_PATHS "usr/lib")


add_subdirectory(${UTILS_PATH})
add_subdirectory(${CODE_LIB_PATH})
