set(2DCONV_PATH "${OPENCL_PATH}/2DCONV")
set(2MM_PATH "${OPENCL_PATH}/2MM")
set(3DCONV_PATH "${OPENCL_PATH}/3DCONV")
set(3MM_PATH "${OPENCL_PATH}/3MM")
set(ATAX_PATH "${OPENCL_PATH}/ATAX")
set(ATAX2_PATH "${OPENCL_PATH}/ATAX2")
set(ATAX3_PATH "${OPENCL_PATH}/ATAX3")
set(BICG_PATH "${OPENCL_PATH}/BICG")
set(CORR_PATH "${OPENCL_PATH}/CORR")
set(CORR2_PATH "${OPENCL_PATH}/CORR2")
set(COVAR_PATH "${OPENCL_PATH}/COVAR")
set(FDTD-2D_PATH "${OPENCL_PATH}/FDTD-2D")
set(GEMM_PATH "${OPENCL_PATH}/GEMM")
set(GESUMMV_PATH "${OPENCL_PATH}/GESUMMV")
set(GRAMSCHM_PATH "${OPENCL_PATH}/GRAMSCHM")
set(MVT_PATH "${OPENCL_PATH}/MVT")
set(SYR2K_PATH "${OPENCL_PATH}/SYR2K")
set(SYRK_PATH "${OPENCL_PATH}/SYRK")


add_subdirectory(${2DCONV_PATH})
add_subdirectory(${2MM_PATH})
add_subdirectory(${3DCONV_PATH})
add_subdirectory(${3MM_PATH})
add_subdirectory(${ATAX_PATH})
add_subdirectory(${ATAX2_PATH})
add_subdirectory(${ATAX3_PATH})
add_subdirectory(${BICG_PATH})
add_subdirectory(${CORR_PATH})
add_subdirectory(${CORR2_PATH})
add_subdirectory(${COVAR_PATH})
add_subdirectory(${FDTD-2D_PATH})
add_subdirectory(${GEMM_PATH})
add_subdirectory(${GESUMMV_PATH})
add_subdirectory(${GRAMSCHM_PATH})
add_subdirectory(${MVT_PATH})
add_subdirectory(${SYR2K_PATH})
add_subdirectory(${SYRK_PATH})
